--- a/projects/gentleman-signals-state-manager/package.json
+++ b/projects/gentleman-signals-state-manager/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gentleman-signals-state-manager",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "peerDependencies": {
-    "@angular/common": "^17.0.0-rc.2",
-    "@angular/core": "^17.0.0-rc.2"
+    "@angular/common": "^17.0.0",
+    "@angular/core": "^17.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
